--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,14 @@
       <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+  <filter>
+    <filter-name>f1</filter-name>
+    <filter-class>com.springgoals.filter.Filter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>f1</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
