--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,12 +19,12 @@
     </servlet-mapping>
 
   <filter>
-    <filter-name>f1</filter-name>
+    <filter-name>Filter</filter-name>
     <filter-class>com.springgoals.filter.Filter</filter-class>
   </filter>
 
   <filter-mapping>
-    <filter-name>f1</filter-name>
+    <filter-name>Filter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
