--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
       <artifactId>validation-api</artifactId>
       <version>2.0.1.Final</version>
     </dependency>
+      <dependency>
+          <groupId>javax.transaction</groupId>
+          <artifactId>transaction-api</artifactId>
+          <version>1.1-rev-1</version>
+      </dependency>
 
   </dependencies>
 
