--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
           <artifactId>transaction-api</artifactId>
           <version>1.1-rev-1</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-jpa</artifactId>
+          <version>3.0.0</version>
+      </dependency>
 
   </dependencies>
 
