--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-#local environment
 
+#dev environment
 spring.profiles.active=@spring.profiles.active@
 
 connectionString=jdbc:mysql://localhost:3306/education
@@ -9,13 +9,3 @@ dbUser=root
 dbPassword=AngjelaWork123
 
 test=com.mysql.cj.jdbc.Driver
-
-
-
-
-
-
-
-
-
-
