Profiles in Spring

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,5 @@ dbUser=root
 dbPassword=AngjelaWork123
 
 test=com.mysql.cj.jdbc.Driver
+
+external.services="These are services from dev properties"
