--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,9 +23,31 @@
     <filter-class>com.springgoals.filter.Filter</filter-class>
   </filter>
 
+  <filter>
+    <filter-name>LogFilter</filter-name>
+    <filter-class>com.springgoals.filter.LogFilter</filter-class>
+  </filter>
+
+  <filter>
+    <filter-name>AuthenFilter</filter-name>
+    <filter-class>com.springgoals.filter.AuthenFilter</filter-class>
+  </filter>
+
   <filter-mapping>
     <filter-name>Filter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>LogFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>AuthenFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+
 
 </web-app>
