--- a/src/main/resources/ application-local.properties
+++ b/src/main/resources/ application-local.properties
@@ -1,6 +1,7 @@
 #local environment
 
-spring.profiles.active=@spring.profiles.active@
+sp
+@spring.profiles.active@
 
 connectionString=jdbc:mysql://localhost:3306/education
 
@@ -11,3 +12,7 @@ dbPassword=AngjelaWork123
 test=com.mysql.cj.jdbc.Driver
 
 external.services="These are services from local properties"
+
+security.basic.enabled=false
+
+management.security.enabled=false
