--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ dbPassword=AngjelaWork123
 
 test=com.mysql.cj.jdbc.Driver
 
+security.basic.enabled=false
+
+management.security.enabled=false
 
 
 
