commit for task number 80 and applied notes for task number 77

--- a/src/main/resources/ application-local.properties
+++ b/src/main/resources/ application-local.properties
@@ -1,7 +1,6 @@
 #local environment
 
-sp
-@spring.profiles.active@
+spring.profiles.active=@spring.profiles.active@
 
 connectionString=jdbc:mysql://localhost:3306/education
 
@@ -16,3 +15,5 @@ external.services="These are services from local properties"
 security.basic.enabled=false
 
 management.security.enabled=false
+
+app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
