--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,5 @@ external.services="These are services from dev properties"
 security.basic.enabled = false
 
 management.security.enabled = false
+
+app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
