appled notes  for tasks number 81 and 92

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 
   <filter-mapping>
     <filter-name>Filter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/auth/*</url-pattern>
   </filter-mapping>
 
   <filter-mapping>
@@ -45,7 +45,8 @@
 
   <filter-mapping>
     <filter-name>AuthenFilter</filter-name>
-    <url-pattern>/auth</url-pattern>
+    <url-pattern>/api/*</url-pattern>
+
   </filter-mapping>
 
 
